# baregl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  gen_proj_linux.sh  gen_proj_windows.bat  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-test.yml  build.yml
cmake/: TargetConfig.cmake
examples/: CMakeLists.txt  premake5.lua
examples/1-triangle/: CMakeLists.txt  Main.cpp  premake5.lua
examples/2-cube/: CMakeLists.txt  Main.cpp  premake5.lua
examples/3-framebuffer/: CMakeLists.txt  Main.cpp  premake5.lua
examples/4-geometry/: CMakeLists.txt  Main.cpp  premake5.lua
examples/5-compute/: CMakeLists.txt  Main.cpp  premake5.lua
examples/6-tessellation/: CMakeLists.txt  Main.cpp  premake5.lua
include/baregl/: Backend.h  BareGL.h  Buffer.h  Context.h  Framebuffer.h  Renderbuffer.h  ShaderProgram.h  ShaderStage.h  Texture.h  TextureHandle.h  VertexArray.h
include/baregl/data/: BufferMemoryRange.h  ContextDesc.h  GetResult.h  GetResultList.h  QueryResult.h  ShaderCompilationResult.h  ShaderLinkingResult.h  TextureDesc.h  UniformInfo.h  VertexAttribute.h
include/baregl/debug/: Debug.h  IAssertHandler.h  IEventHandler.h  ILogHandler.h
include/baregl/detail/: NativeObject.h
include/baregl/math/: Conversions.h  Mat3.h  Mat4.h  Vec2.h  Vec3.h  Vec4.h
include/baregl/types/: EAccessSpecifier.h  EBlendingEquation.h  EBlendingFactor.h  EBufferType.h  EComparaisonAlgorithm.h  EContextFlags.h  ECullFace.h  EDataType.h  EDrawBuffer.h  EFormat.h  EFramebufferAttachment.h  EGetParameter.h  EGraphicsBackend.h  EHint.h  EImageAccessSpecifier.h  EInternalFormat.h  ELogicOperation.h  EMemoryBarrierFlags.h  EOperation.h  EPixelDataFormat.h  EPixelDataType.h  EPrimitiveMode.h  EProvokingVertexConvention.h  ERasterizationMode.h  ERenderingCapability.h  EShaderType.h  ETextureFilteringMode.h  ETextureType.h  ETextureUnit.h  ETextureWrapMode.h  EUniformType.h
include/baregl/utils/: BitmaskOperators.h
src/baregl/: Backend.cpp  Buffer.cpp  Context.cpp  Framebuffer.cpp  Renderbuffer.cpp  ShaderProgram.cpp  ShaderStage.cpp  Texture.cpp  TextureHandle.cpp  VertexArray.cpp
src/baregl/debug/: Assert.cpp  Assert.h  Event.cpp  Event.h  Log.cpp  Log.h
src/baregl/detail/: NativeObject.cpp  Types.h
src/baregl/detail/glad/: glad.c
src/baregl/details/: Types.h
src/baregl/utils/: EnumMapper.h
tests/: CMakeLists.txt
tests/common/: Boilerplate.cpp  Boilerplate.h
tests/src/common/: BareGL.cpp  BareGL.h
tests/src/suites/: Context.cpp  HelloWorld.cpp  Init.cpp
tests/suites/: Context.cpp  Queries.cpp
